Skip to content

Regression: VLM schedule time incorrect

On Linux, VLM uses mdate() as if it were the wall clock, but it is actually the monotonic clock (i.e. system uptime). Therefore, scheduled VLM input launch is wrong by a few decades.

This renders VLM schedule totally useless on Linux.

Edited by Rémi Denis-Courmont
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information