vlm: Use RT rather than monotonic clock - fixes #1288 Patch by Brian C. Wiles